verify token and get detail
